- Ajouter atributes to dto evaluation